<resources>
    <string name="Address">Address:</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_message">This software uses map data provided by OpenStreetMap.org</string>
    <string name="about_of_the_app">About the app</string>
    <string name="about_view_source_code">View source code at %1$s&lt;br/>Join our %2$s channel&lt;br/>Please help us with app translation. More on GitHub</string>
    <string name="accuracy_settings">Accuracy Settings</string>
    <string name="accuracy_title">Accuracy</string>
    <string name="add_in_boookmarks">Add in bookmarks</string>
    <string name="add_more_route">Add more route?</string>
    <string name="address">Address</string>
    <string name="adjust_clock">Adjust clock</string>
    <string name="altitude">Altitude</string>
    <string name="altitude_above_sea_level">Altitude above sea level:</string>
    <string name="altitude_detection_failed">Failed to detect altitude!</string>
    <string name="altitude_determined">Altitude successfully determined!</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="aosp_developer_instruction_link">https://www.youtube.com/watch?v=uMjyb3wf1Lw</string>
    <string name="app_name">Listick Fake GPS</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto">Auto</string>
    <string name="auto_altitude_detection">Auto altitude detection</string>
    <string name="auto_altitude_summary">Altitude when location is spoofing will be determined automatically</string>
    <string name="back">Back</string>
    <string name="base">OSM base layer</string>
    <string name="base_nl">Netherlands base overlay</string>
    <string name="bing">Bing</string>
    <string name="bookmark_label">Label:</string>
    <string name="boookmarks">Bookmarks</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="brake_at_turning">Brake at turning</string>
    <string name="brake_at_turning_summary">Decrease speed when cornering</string>
    <string name="building_route">Please wait. Building Route...</string>
    <string name="cacheManagerCancelBody">Do you want to cancel the map download?</string>
    <string name="cacheManagerCancelTitle">Cancel map download</string>
    <string name="cacheManagerCleanFailed">Cleaning failed. %s tiles deleted.</string>
    <string name="cacheManagerCleaningTitle">Cleaning tiles</string>
    <string name="cacheManagerDownloadingTitle">Downloading tiles</string>
    <string name="cacheManagerFailed">Loading completed with %s errors.</string>
    <string name="cacheManagerHandlingMessage">Handling zoom level: %1$s (from %2$s to %3$s)</string>
    <string name="cacheManagerNo">No</string>
    <string name="cacheManagerUnsupportedSource">"This online tile source doesn't support bulk download"</string>
    <string name="cacheManagerYes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="closed_route">Closed loop route</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">00000000000000000000000000000000</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="compass">Compass</string>
    <string name="confirmation">Confirmation</string>
    <string name="continue_text">Continue</string>
    <string name="coordinates_invalid_format">Invalid format. Coordinates must be decimal numbers</string>
    <string name="coordinates_invalid_input">The input data must contain exactly two coordinates</string>
    <string name="coordinates_invalid_latitude">Invalid latitude. It must be between -90 and 90 degrees</string>
    <string name="coordinates_invalid_longitude">Invalid longitude. It must be between -180 and 180 degrees</string>
    <string name="copy">Copy</string>
    <string name="copyright">© OpenStreetMap contributors</string>
    <string name="could_not_get_location">"Couldn't get location. Please check is location services enabled."</string>
    <string name="cyclemap">Cycle Map</string>
    <string name="dark_theme">Dark theme</string>
    <string name="dark_theme_auto_battery">When \"Battery saver\" is enabled</string>
    <string name="dark_theme_auto_time">At night</string>
    <string name="dark_theme_follow_system">@string/follow_system</string>
    <string name="dark_theme_off">Always off</string>
    <string name="dark_theme_on">Always on</string>
    <string name="date_is_inaccurate">Date is inaccurate</string>
    <string name="date_is_inaccurate_summary">"You phone date is inaccurate!
Adjust your clock and try again."</string>
    <string name="default_web_client_id">587032778142-6s7869nthh6rb5kppf3me37gfg8r2tn1.apps.googleusercontent.com</string>
    <string name="delay_at_the_last_point">Delay at the last point:</string>
    <string name="destination">Destination</string>
    <string name="detecting_altitude">Detecting altitude...</string>
    <string name="dev_settings_error">Failed to open developer settings. You can open it manually!</string>
    <string name="developer_options_disabled">Developer options is disabled!</string>
    <string name="developer_options_instruction">1) Go to Settings&lt;br>2) Find About Phone click&lt;br>3) Find and tap 7 times on item Build Number&lt;br>4) Return general menu of settings and click Developer Options&lt;br>5) Find item Mock Locations or Simulate Locations&lt;br>6) Tap, and select Listick Fake GPS.</string>
    <string name="developer_options_instruction_miui">1) Go to Settings&lt;br>2) Find About Phone click&lt;br>3) Find and tap 7 times on item Build Number&lt;br>4) Return general menu of settings and click Developer Options&lt;br>5) Find item Mock Locations&lt;br>6) Tap, and select Listick Fake GPS.</string>
    <string name="difference">Difference</string>
    <string name="difference_error">"Difference (±) can't be bigger or equal to speed"</string>
    <string name="dont_enable_ml">"Don't enable mock location"</string>
    <string name="doubletap_to_exit">Please click BACK again to exit</string>
    <string name="draw_overlays_permission">Overlays</string>
    <string name="draw_overlays_summary">"The joystick requires the Draw Overlays permission to work. After pressing 'Grant', find Listick Fake GPS in the list and activate the permission"</string>
    <string name="edit">Edit</string>
    <string name="enter_addr_or_coordinates">Enter address or coordinates:</string>
    <string name="go_to_coordinates">Jump to coordinates</string>
    <string name="information">Information</string>
    <string name="location">Location</string>
    <string name="location_permission_summary">To determine your current location</string>
    <string name="need_permissions">To continue working, the following permissions are required:</string>
    <string name="origin">Origin</string>
    <string name="our_telegram">Our Telegram</string>
    <string name="permissions">Permissions</string>
    <string name="rate_app">Rate app!</string>
    <string name="remove">Delete</string>
    <string name="search_name">Search</string>
    <string name="select_on_map">Select on Map</string>
    <string name="settings">Settings</string>
    <string name="share">Share location</string>
    <string name="start">Start</string>
    <string name="where_from_info">Where from:</string>
    <string name="where_to_text">Where to:</string>
</resources>