<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    android:background="@drawable/dialog_ui"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:textColor="@color/uicolor_text_high"
        android:id="@id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3.0dip"
        android:text="@string/information"
        android:layout_centerHorizontal="true" />
    <View
        android:id="@id/divider"
        android:background="@color/divider"
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_marginTop="3.0dip"
        android:layout_marginBottom="3.0dip"
        android:layout_below="@id/title" />
    <TextView
        android:textSize="14.0sp"
        android:textColor="@color/uicolor_text_medium"
        android:id="@id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3.0dip"
        android:text="NAME"
        android:layout_below="@id/divider"
        android:paddingStart="15.0dip" />
    <TextView
        android:id="@id/where_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/where_from_info"
        android:layout_below="@id/name"
        android:layout_marginStart="15.0dip" />
    <TextView
        android:id="@id/where_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/where_to_text"
        android:layout_below="@id/where_from"
        android:layout_marginStart="15.0dip" />
    <org.osmdroid.views.MapView
        android:id="@id/map"
        android:layout_width="fill_parent"
        android:layout_height="200.0dip"
        android:layout_marginTop="15.0dip"
        android:layout_below="@id/where_to"
        android:layout_marginStart="15.0dip"
        android:layout_marginEnd="15.0dip" />
    <RelativeLayout
        android:id="@id/copyright"
        android:background="@color/secondaryColor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/map"
        android:layout_marginStart="15.0dip"
        android:layout_marginEnd="15.0dip">
        <TextView
            android:textSize="6.0sp"
            android:textColor="@color/uicolor_text_medium"
            android:id="@id/copyright_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright" />
    </RelativeLayout>
    <include
        android:layout_width="fill_parent"
        android:layout_height="200.0dip"
        android:layout_margin="15.0dip"
        android:layout_below="@id/where_to"
        layout="@layout/route_building_fullscreen_dialog" />
    <RelativeLayout
        android:id="@id/remove"
        android:paddingTop="8.0dip"
        android:paddingBottom="8.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5.0dip"
        android:foreground="@drawable/material_ripple"
        android:layout_below="@id/map"
        android:layout_marginStart="15.0dip"
        android:layout_marginEnd="15.0dip">
        <ImageView
            android:id="@id/set_on_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete_24dp"
            android:layout_alignParentLeft="true" />
        <TextView
            android:textSize="16.0sp"
            android:textColor="@color/uicolor_text_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            android:layout_marginStart="10.0dip"
            android:layout_toEndOf="@id/set_on_map" />
    </RelativeLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/remove">
        <com.google.android.material.button.MaterialButton
            android:textSize="16.0sp"
            android:textColor="@color/uicolor_text_high"
            android:id="@id/cancel_action"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3.0dip"
            android:text="@string/cancel"
            android:layout_weight="1.0"
            android:layout_below="@id/text_dialog"
            android:textAllCaps="false" />
        <com.google.android.material.button.MaterialButton
            android:textSize="16.0sp"
            android:textColor="@color/uicolor_text_high"
            android:id="@id/btn_action"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3.0dip"
            android:text="@string/start"
            android:layout_weight="1.0"
            android:layout_below="@id/text_dialog"
            android:textAllCaps="false" />
    </LinearLayout>
</RelativeLayout>