<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:id="@id/relative"
        android:background="@color/activity_header"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/activity_header_height">
        <TextView
            android:textSize="36.0sp"
            android:textStyle="bold"
            android:textColor="@color/uicolor_text_high"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:text="@string/permissions"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10.0dip" />
        <View
            android:background="@color/divider"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:padding="10.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative">
        <TextView
            android:textColor="@color/uicolor_text_high"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3.0dip"
            android:text="@string/need_permissions" />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30.0dip">
            <RelativeLayout
                android:id="@id/location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10.0dip">
                <ImageView
                    android:id="@id/location_img"
                    android:layout_width="48.0dip"
                    android:layout_height="48.0dip"
                    android:src="@drawable/ic_location" />
                <TextView
                    android:textSize="16.0sp"
                    android:textColor="@color/uicolor_text_high"
                    android:id="@id/location_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:layout_toEndOf="@id/location_img" />
                <TextView
                    android:textSize="12.0sp"
                    android:textColor="@color/uicolor_text_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_permission_summary"
                    android:layout_alignBottom="@id/location_img"
                    android:layout_toEndOf="@id/location_img" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <com.google.android.material.button.MaterialButton
            android:textSize="16.0dip"
            android:textColor="@color/white"
            android:id="@id/btn_continue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12.0dip"
            android:text="@string/continue_text"
            android:textAllCaps="false"
            android:layout_marginStart="12.0dip"
            android:layout_marginEnd="12.0dip"
            android:backgroundTint="@color/primaryColor" />
    </RelativeLayout>
</RelativeLayout>