<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:focusableInTouchMode="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@id/header"
        android:background="@color/material_header"
        android:layout_width="fill_parent"
        android:layout_height="80.0dip"
        android:elevation="15.0dip">
        <RelativeLayout
            android:id="@id/searchbar"
            android:background="@android:color/transparent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:id="@id/search_bar_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2.0dip"
                android:text="@string/enter_addr_or_coordinates"
                android:layout_marginStart="10.0dip" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:layout_below="@id/search_bar_hint">
                <EditText
                    android:id="@id/search_destination"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:inputType="text"
                    android:imeOptions="actionSearch"
                    android:alpha="0.8"
                    android:drawableStart="@drawable/ic_search"
                    android:layout_marginStart="10.0dip"
                    android:layout_marginEnd="10.0dip"
                    android:layout_toStartOf="@id/search"
                    style="@style/uisearchview" />
                <TextView
                    android:id="@id/search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_name"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10.0dip"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
    <include
        layout="@layout/maps_fragment" />
    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/search_popup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header">
        <ListView
            android:id="@id/results"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:textSize="@dimen/osm_copyright_text_size"
        android:textColor="@color/uicolor_text_medium"
        android:id="@id/copyright_txt"
        android:paddingBottom="8.0dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:layout_above="@id/bottomboard_container"
        android:paddingStart="8.0dip" />
    <LinearLayout
        android:id="@id/bottomboard_container"
        android:background="@color/material_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:elevation="15.0dip">
        <com.google.android.material.button.MaterialButton
            android:id="@id/back"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8.0dip"
            android:layout_weight="1.0"
            android:insetLeft="0.0dip"
            android:insetRight="0.0dip"
            android:insetTop="0.0dip"
            android:insetBottom="0.0dip"
            android:layout_alignParentStart="true"
            app:icon="@drawable/ic_arrow_back"
            app:iconGravity="textStart"
            app:iconPadding="0.0dip"
            style="@style/Widget.Material3.Button.TonalButton" />
        <com.google.android.material.button.MaterialButton
            android:id="@id/continue_action"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8.0dip"
            android:text="@string/continue_text"
            android:layout_weight="0.4"
            android:layout_alignParentEnd="true" />
    </LinearLayout>
</RelativeLayout>